@@ -11,7 +11,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class PublisherService {
@@ -46,7 +45,7 @@ public class PublisherService {
         return publisherRepository.findAll()
                 .stream()
                 .map(publisherMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void delete(Long id){
